// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ErrorTextCard > does not render when showError is false 1`] = `
<div>
  
</div>
`;

exports[`ErrorTextCard > renders correctly with an error message when showError is true 1`] = `
<div>
  <div
    class="w-full rounded-lg bg-red-100 px-4 py-1 mt-4"
    data-testid="input-card"
  >
    <div
      class="text-red-500 my-2 whitespace-normal text-sm font-normal"
      data-testid="text"
    >
      This is an error!
    </div>
  </div>
  
</div>
`;

exports[`ErrorTextCard > updates the snapshot when the error message changes 1`] = `
<div>
  <div
    class="w-full rounded-lg bg-red-100 px-4 py-1 mt-4"
    data-testid="input-card"
  >
    <div
      class="text-red-500 my-2 whitespace-normal text-sm font-normal"
      data-testid="text"
    >
      A different error message!
    </div>
  </div>
  
</div>
`;
